@@ -1,35 +1,31 @@
 import summer.fun.Configuration;
 import summer.fun.PebbleViewResolver;
 import summer.fun.SummerFun;
-import summer.fun.ViewResolver;
-
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 
 public class SampleApp {
     public static void main(String[] args) {
-        ViewResolver viewResolver = new PebbleViewResolver();
-        viewResolver.setPrefix("templates");
-        viewResolver.setSuffix(".html");
+        var viewResolver = new PebbleViewResolver()
+             .setPrefix("templates")
+             .setSuffix(".html");
 
-        Configuration config = Configuration.builder()
-                .withContextPath("/app")
-                .withViewResolver(viewResolver)
-                .build();
+        var config = Configuration.builder()
+             .withContextPath("/app")
+             .withViewResolver(viewResolver)
+             .build();
 
-        SummerFun app = new SummerFun()
-                .withConfiguration(config);
+        var app = new SummerFun()
+             .withConfiguration(config);
 
         app.get("/heroes", (request, response) -> {
-            List<Hero> heroes = getHeroes();
+            var heroes = getHeroes();
             response.json().send(heroes);
         });
 
         app.get("/hero-list", (request, response) -> {
-            List<Hero> heroes = getHeroes();
-            Map<String, Object> attributes = new HashMap<>();
+            var heroes = getHeroes();
+            var attributes = new HashMap<String, Object>();
             attributes.put("heroes", heroes);
             response.render("hero/index", attributes);
         });
@@ -41,17 +37,17 @@ public class SampleApp {
     }
 
     public static List<Hero> getHeroes() {
-        Hero hero1 = new Hero();
+        var hero1 = new Hero();
         hero1.setId(1);
         hero1.setLastName("Rizal");
         hero1.setFirstName("Jose");
 
-        Hero hero2 = new Hero();
+        var hero2 = new Hero();
         hero2.setId(2);
         hero2.setLastName("Bonifacio");
         hero2.setFirstName("Andres");
 
-        return Arrays.asList(hero1, hero2);
+        return List.of(hero1, hero2);
     }
 
 }
